[Mac] AirPlay to password protected AppleTV fails https://bugs.webkit.org/show_bug.cgi?id=146812

Reviewed by NOBODY (OOPS!).

* Modules/mediasession/WebMediaSessionManager.cpp:
(WebCore::WebMediaSessionManager::showPlaybackTargetPicker): Initialize previouslyRequestedPicker.
(WebCore::WebMediaSessionManager::clientStateDidChange): Cleanup the logic and add a comment
  to make it slightly easier to follow. Don't begin playing to a device unless playback
  has just started (don't switch in mid-play).
(WebCore::WebMediaSessionManager::configurePlaybackTargetClients): Use the last client to
  request the device picker as a fallback in case no other client is a canditate. Add more
  logging to make it possible to debug the selection logic.
(WebCore::WebMediaSessionManager::scheduleDelayedTask): Fiddle with the logging.


Canonical link: https://commits.webkit.org/164885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186636 268f45cc-cd09-0410-ab3c-d52691b4dbfc